k8s/user-service/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: user-service-ingress
  namespace: url-shortener
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`localhost`) && PathPrefix(`/users`)
    kind: Rule
    middlewares: 
      - name: user-stripprefix
    services:
      - name: user-service
        port: http
